Use Java 11 Path.of()